--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
+    "commander": "^2.20.0",
     "@graphql-inspector/core": "^3.0.1",
     "@graphql-tools/graphql-file-loader": "^7.1.0",
     "@graphql-tools/load": "^7.3.2",
-    "graphql": "^15.6.0",
+    "graphql": "^16.0.1",
     "picocolors": "^1.0.0",
     "prettier": "^2.4.1"
   },
