--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "mock-fs": "^5.1.1",
     "pinst": "^2.1.6"
   },
+  "peerDependencies": {
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
+  },
   "prettier": {
     "singleQuote": false,
     "bracketSpacing": true,
